Don't call del when asked to overwrite a destination file in rename. Otherwise, the finished signal from calling del will cause the bug reported in 255296.

BUG: 255296
FIXED-IN: 4.6.4